--- a/artifacts/lrms/slurm/slurm_wn_install.yml
+++ b/artifacts/lrms/slurm/slurm_wn_install.yml
@@ -36,6 +36,17 @@
         replace: "{{ansible_tun0.ipv4.address}} {{ansible_hostname}}.localdomain {{ansible_hostname}}"
       delegate_facts: True
       delegate_to: '{{ slurm_front_end_ip }}'
+      register: result
+
+    - name: NFS restart Debian
+      service: name=nfs-kernel-server state=restarted
+      delegate_to: '{{ slurm_front_end_ip }}'
+      when: result is changed and ansible_os_family == "Debian"
+
+    - name: NFS restart RedHat
+      service: name=nfs-server state=restarted
+      delegate_to: '{{ slurm_front_end_ip }}'
+      when: result is changed and ansible_os_family == "RedHat"
 
     - name: Add Master VPN IP in host
       replace:
