--- a/examples/hybrid_elastic_cluster_vr_l2.yaml
+++ b/examples/hybrid_elastic_cluster_vr_l2.yaml
@@ -52,7 +52,9 @@ topology_template:
       type: tosca.nodes.network.Network
       properties:
         network_type: public
-        network_name: public-cesnet-78-128-251
+        network_name: public-muni-147-251-124-GROUP
+        #network_name: public-cesnet-78-128-251-GROUP
+        #network_name: public-cesnet-78-128-250-PERSONAL
 
     server_pub_port:
       type: tosca.nodes.network.Port
@@ -100,8 +102,7 @@ topology_template:
     indigovr_cp:
       type: tosca.nodes.indigo.VR.CentralPoint
       requirements:
-        - host:
-            node: lrms_server
+        - host: lrms_server
 
     lrms_front_end:
       type: tosca.nodes.indigo.LRMS.FrontEnd.Slurm
