--- a/artifacts/deepaas/deepaas.yml
+++ b/artifacts/deepaas/deepaas.yml
@@ -3,7 +3,7 @@
   connection: local
   tasks:
   - get_url:
-      url: https://raw.githubusercontent.com/indigo-dc/tosca-types/master/artifacts/deepaas/deepaas_app.j2
+      url: https://raw.githubusercontent.com/indigo-dc/tosca-types/stable/v4.0.1/artifacts/deepaas/deepaas_app.j2
       dest: /var/tmp/deepaas_app.j2
   - template:
       src: /var/tmp/deepaas_app.j2
