--- a/examples/kubernetes_cluster_deepaas.yaml
+++ b/examples/kubernetes_cluster_deepaas.yaml
@@ -1,7 +1,7 @@
 tosca_definitions_version: tosca_simple_yaml_1_0
 
 imports:
-  - indigo_custom_types: https://raw.githubusercontent.com/indigo-dc/tosca-types/master/custom_types.yaml
+  - indigo_custom_types: https://raw.githubusercontent.com/indigo-dc/tosca-types/stable/v4.0.1/custom_types.yaml
 
 description: >
   TOSCA test for launching a Kubernetes Virtual Cluster.
@@ -83,7 +83,7 @@ topology_template:
       interfaces:
         Standard:
           configure: 
-            implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/master/artifacts/deepaas/deepaas.yml
+            implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/stable/v4.0.1/deepaas.yml
             inputs:
               deepaas_dockerhub_img: { get_input: dockerhub_img }
               deepaas_rclone_conf: { get_input: rclone_conf }
