--- a/examples/web_mysql_tosca_across_clouds.yaml
+++ b/examples/web_mysql_tosca_across_clouds.yaml
@@ -1,7 +1,7 @@
 tosca_definitions_version: tosca_simple_yaml_1_0
 
 imports:
-  - indigo_custom_types: https://raw.githubusercontent.com/indigo-dc/tosca-types/master/custom_types.yaml
+  - indigo_custom_types: https://raw.githubusercontent.com/indigo-dc/tosca-types/stable/v4.0.1/custom_types.yaml
 
 description: >
   TOSCA document for launching a classic example of a two tier application with an
@@ -72,7 +72,7 @@ topology_template:
       interfaces:
         Standard:
           configure:
-            implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/master/artifacts/mysql/mysql_db_import.yml
+            implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/stable/v4.0.1/mysql_db_import.yml
             inputs:
               db_name: { get_property: [ SELF, name ] }
               db_data: { get_artifact: [ SELF, db_content ] }
