--- a/artifacts/lrms/slurm/slurm_fe_install.yml
+++ b/artifacts/lrms/slurm/slurm_fe_install.yml
@@ -5,10 +5,15 @@
      vnode_prefix: vnode-
   pre_tasks:
   - name: "Add nodes mapping in hosts file"
-    lineinfile: dest=/etc/hosts regexp='.*{{ item.1 }}.*|{{ vnode_prefix }}{{ item.0 + 1 }}$' line="{{ item.1 }} {{ vnode_prefix }}{{ item.0 + 1 }} {{ vnode_prefix }}{{ item.0 + 1 }}.localdomain" state=present
+    lineinfile: dest=/etc/hosts regexp='.*{{ item.1 }}.*$' line="{{ item.1 }} {{ vnode_prefix }}{{ item.0 + 1 }} {{ vnode_prefix }}{{ item.0 + 1 }}.localdomain" state=present
+    with_indexed_items: '{{ wn_ips }}'
+  - name: "Add nodes mapping in hosts file"
+    lineinfile: dest=/etc/hosts regexp='.*{{ vnode_prefix }}{{ item.0 + 1 }}.localdomain.*$' line="{{ item.1 }} {{ vnode_prefix }}{{ item.0 + 1 }} {{ vnode_prefix }}{{ item.0 + 1 }}.localdomain" state=present
     with_indexed_items: '{{ wn_ips }}'
   - name: "Add master mapping in hosts file"
-    lineinfile: dest=/etc/hosts regexp='.*{{ front_end_ip }}.*|slurmserver$' line="{{ front_end_ip }} slurmserver slurmserver.localdomain" state=present
+    lineinfile: dest=/etc/hosts regexp='.*{{ front_end_ip }}.*$' line="{{ front_end_ip }} slurmserver slurmserver.localdomain" state=present
+  - name: "Add master mapping in hosts file"
+    lineinfile: dest=/etc/hosts regexp='.*slurmserver.localdomain.*$' line="{{ front_end_ip }} slurmserver slurmserver.localdomain" state=present
 
   tasks:
   - block:
