--- a/artifacts/lrms/slurm/slurm_fe_install.yml
+++ b/artifacts/lrms/slurm/slurm_fe_install.yml
@@ -13,7 +13,7 @@
   - name: "Add master mapping in hosts file"
     lineinfile: dest=/etc/hosts regexp='.*{{ front_end_ip }}.*$' line="{{ front_end_ip }} slurmserver slurmserver.localdomain" state=present
   - name: "Replace master mapping in hosts file"
-    lineinfile: dest=/etc/hosts regexp='.*slurmserver.localdomain.*$' replace="{{ front_end_ip }} slurmserver slurmserver.localdomain"
+    replace: dest=/etc/hosts regexp='.*slurmserver.localdomain.*$' replace="{{ front_end_ip }} slurmserver slurmserver.localdomain"
 
   tasks:
   - block:
