set devel branch

--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -1008,7 +1008,7 @@ node_types:
       icon: /images/slurm.png
     artifacts:
       slurm_role:
-        file: indigo-dc.slurm,master
+        file: indigo-dc.slurm,devel
         type: tosca.artifacts.AnsibleGalaxy.role
       nfs_role:
         file: indigo-dc.nfs,master
