--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -2222,10 +2222,6 @@ node_types:
   tosca.nodes.indigo.Qcg.Job:
     derived_from: tosca.nodes.indigo.Batch.Job
     properties:
-      directory:
-        required: no
-        type: string
-        description: Work directory for the Job
       schema:
         required: no
         type: string
@@ -2234,6 +2230,66 @@ node_types:
         required: no
         type: string
         description: User's note for the Job
+      arguments:
+        required: no
+        type: list
+        entry_schema:
+          type: string
+        description: list of arguments for the executable
+      directory:
+        required: no
+        type: string
+        description: Work directory for the Job
+      stdout:
+        required: no
+        type: string
+        description: file name to place standard output stream
+      stderr:
+        required: no
+        type: string
+        description: file name to place standard error stream
+      std_outerr:
+        required: no
+        type: string
+        description: file name to place standard output and error streams
+      stdin:
+        required: no
+        type: string
+        description: file name with the standard input stream
+      total_cores:
+        required: no
+        type: integer
+        description: total number of cores
+      total_nodes:
+        required: no
+        type: integer
+        description: total number of nodes
+      cores_per_node:
+        required: no
+        type: integer
+        description: number of cores per single node
+      memory_per_node:
+        required: no
+        type: integer
+        description: available memory per single node
+      memory_per_core:
+        required: no
+        type: integer
+        description: available memory per single core
+      gpus:
+        required: no
+        type: integer
+        description: number of gpus
+      queue:
+        required: no
+        type: string
+        description: "queue/partition name"
+      wall_clock:
+        required: no
+        type: string
+        # format hh:mm:ss
+        description: maximum total execution time
+
 
 # https://wiki.italiangrid.it/twiki/bin/view/CREAM/JdlGuide
   tosca.nodes.indigo.Grid.Job:
