--- a/artifacts/mysql/mysql_install.yml
+++ b/artifacts/mysql/mysql_install.yml
@@ -5,6 +5,11 @@
   - name: MySQL | Make sure the MySQL packages are installed
     apt: pkg=mysql-server,python-mysqldb update_cache=yes
     when: ansible_os_family == "Debian"
+
+  - name: MySQL | Make sure the MySQL packages are installed
+    apt: pkg=python3-pymysql
+    when: ansible_os_family == "Debian"
+    ignore_errors: yes
     
   - name: MySQL | Make sure the MySQL packages are installed
     yum: name=mariadb-server,MySQL-python
